--- a/index.htm
+++ b/index.htm
@@ -6,22 +6,23 @@
     <meta name="viewport" id="metaViewport" content="user-scalable=no, initial-scale=1, width=device-width, viewport-fit=cover" data-tdv-general-scale="0.5"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <script src="lib/tdvplayer.js?v=1661581239214"></script>
-    <link rel="preload" href="locale/pt.txt?v=1661581239214" as="fetch" crossorigin="anonymous"/>
-	<link rel="preload" href="script.js?v=1661581239214" as="script"/>
-	<link rel="preload" href="media/panorama_DB956ED4_D7FD_BCB7_41B3_000FB80446F2_0/r/3/0_0.jpg?v=1661581239214" as="image"/>
-	<link rel="preload" href="media/panorama_DB956ED4_D7FD_BCB7_41B3_000FB80446F2_0/l/3/0_0.jpg?v=1661581239214" as="image"/>
-	<link rel="preload" href="media/panorama_DB956ED4_D7FD_BCB7_41B3_000FB80446F2_0/u/3/0_0.jpg?v=1661581239214" as="image"/>
-	<link rel="preload" href="media/panorama_DB956ED4_D7FD_BCB7_41B3_000FB80446F2_0/d/3/0_0.jpg?v=1661581239214" as="image"/>
-	<link rel="preload" href="media/panorama_DB956ED4_D7FD_BCB7_41B3_000FB80446F2_0/f/3/0_0.jpg?v=1661581239214" as="image"/>
-	<link rel="preload" href="media/panorama_DB956ED4_D7FD_BCB7_41B3_000FB80446F2_0/b/3/0_0.jpg?v=1661581239214" as="image"/>
+    <script src="lib/tdvplayer.js?v=1661627065913"></script>
+    <link rel="preload" href="locale/pt.txt?v=1661627065913" as="fetch" crossorigin="anonymous"/>
+	<link rel="preload" href="script.js?v=1661627065913" as="script"/>
+	<link rel="preload" href="media/panorama_DB956ED4_D7FD_BCB7_41B3_000FB80446F2_0/r/3/0_0.jpg?v=1661627065913" as="image"/>
+	<link rel="preload" href="media/panorama_DB956ED4_D7FD_BCB7_41B3_000FB80446F2_0/l/3/0_0.jpg?v=1661627065913" as="image"/>
+	<link rel="preload" href="media/panorama_DB956ED4_D7FD_BCB7_41B3_000FB80446F2_0/u/3/0_0.jpg?v=1661627065913" as="image"/>
+	<link rel="preload" href="media/panorama_DB956ED4_D7FD_BCB7_41B3_000FB80446F2_0/d/3/0_0.jpg?v=1661627065913" as="image"/>
+	<link rel="preload" href="media/panorama_DB956ED4_D7FD_BCB7_41B3_000FB80446F2_0/f/3/0_0.jpg?v=1661627065913" as="image"/>
+	<link rel="preload" href="media/panorama_DB956ED4_D7FD_BCB7_41B3_000FB80446F2_0/b/3/0_0.jpg?v=1661627065913" as="image"/>
 	<script src="scorm.js" type="text/javascript"></script>
+	<script src="https://remote.3dvista.com/lib/tdvremote.js?v=1661627065913" type="text/javascript"></script>
 	<meta name="description" content="Virtual Tour"/>
 	<meta name="theme-color" content="#FF9900"/>
-    <script src="script.js?v=1661581239214"></script>
+    <script src="script.js?v=1661627065913"></script>
     <script type="text/javascript">
         var tour;
-        var devicesUrl = {"general":"script_general.js?v=1661581239214","mobile":"script_mobile.js?v=1661581239214"};
+        var devicesUrl = {"general":"script_general.js?v=1661627065913","mobile":"script_mobile.js?v=1661627065913"};
 
         (function()
         {
@@ -64,9 +65,9 @@
 
             var settings = new TDV.PlayerSettings();
             settings.set(TDV.PlayerSettings.CONTAINER, document.getElementById('viewer'));
-            settings.set(TDV.PlayerSettings.WEBVR_POLYFILL_URL, 'lib/WebVRPolyfill.js?v=1661581239214');
-            settings.set(TDV.PlayerSettings.HLS_URL, 'lib/Hls.js?v=1661581239214');
-            settings.set(TDV.PlayerSettings.QUERY_STRING_PARAMETERS, 'v=1661581239214');
+            settings.set(TDV.PlayerSettings.WEBVR_POLYFILL_URL, 'lib/WebVRPolyfill.js?v=1661627065913');
+            settings.set(TDV.PlayerSettings.HLS_URL, 'lib/Hls.js?v=1661627065913');
+            settings.set(TDV.PlayerSettings.QUERY_STRING_PARAMETERS, 'v=1661627065913');
 
             tour = new TDV.Tour(settings, devicesUrl);
             tour.bind(TDV.Tour.EVENT_TOUR_INITIALIZED, onVirtualTourInit);
@@ -98,7 +99,7 @@
             };
 
             tour.locManager.bind(TDV.Tour.LocaleManager.EVENT_LOCALE_CHANGED, updateTexts.bind(tour.locManager));
-            
+            TDV.Remote.start(tour.player, "g1gm1nbj13pn");
             if (tour.player.cookiesEnabled)
                 enableCookies();
             else
@@ -312,7 +313,7 @@
         #viewer { z-index:1; }
         #preloadContainer { z-index:2; opacity:0; background-color:rgba(255,153,0,1); transition: opacity 0.5s; -webkit-transition: opacity 0.5s; -moz-transition: opacity 0.5s; -o-transition: opacity 0.5s;}
     </style>
-    <link rel="stylesheet" href="fonts.css?v=1661581239214">
+    <link rel="stylesheet" href="fonts.css?v=1661627065913">
 </head>
 <body>
     <div id="preloadContainer" class="fill-viewport"><div style="z-index: 4; position: absolute; left: 0%; top: 50%; width: 100.00%; height: 10.00%"><div style="text-align:left; color:#000; "><DIV STYLE="text-align:center;font-size:2.6815642458100557vmin;"><SPAN STYLE="display:inline-block; letter-spacing:0vmin; white-space:pre-wrap;color:#777777;font-family:Arial, Helvetica, sans-serif;"><SPAN STYLE="color:#3399ff;font-size:2.68vmin;font-family:'Arial Black', Gadget, sans-serif;">POR FAVOR AGUARDE....</SPAN></SPAN></DIV></div></div></div>
